// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remark-container > Has space before ::: 1`] = `
"<div class="rspress-directive tip"><div class="rspress-directive-title">title</div><div class="rspress-directive-content"><p>
sss</p></div></div>"
`;

exports[`remark-container > Has space before type 1`] = `"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a tip.</p></div></div>"`;

exports[`remark-container > No newline 1`] = `
"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>
This is a tip</p></div></div>
<p>12312</p>"
`;

exports[`remark-container > Use {title="foo"} as title 1`] = `"<div class="rspress-directive tip"><div class="rspress-directive-title">Custom title</div><div class="rspress-directive-content"><p>This is a tip.</p></div></div>"`;

exports[`remark-container > Use {title='foo'} as title 1`] = `"<div class="rspress-directive tip"><div class="rspress-directive-title">Custom title</div><div class="rspress-directive-content"><p>This is a tip.</p></div></div>"`;

exports[`remark-container > Use {title=foo} as title 1`] = `"<div class="rspress-directive tip"><div class="rspress-directive-title">Custom title</div><div class="rspress-directive-content"><p>This is a tip.</p></div></div>"`;

exports[`remark-container > With a new line after the start position of container 1`] = `"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a tip</p></div></div>"`;

exports[`remark-container > With block quote in container 1`] = `
"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a tip with <code>code</code> and <a href="foo">link</a> some text</p><blockquote>
<p>This is a quote</p>
</blockquote></div></div>"
`;

exports[`remark-container > With code block in container 1`] = `
"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a tip with <code>code</code> and <a href="foo">link</a> some text</p><pre><code class="language-js">const a = 1;
</code></pre></div></div>"
`;

exports[`remark-container > With link, inlineCode, img, list in container 1`] = `
"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a tip with <code>code</code> and <a href="foo">link</a> some text</p><ul>
<li>list 1</li>
<li>list 2</li>
</ul><p><img src="foo" alt="img"></p></div></div>"
`;

exports[`remark-container > With new line before the end position of container 1`] = `
"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>
This is a tip</p></div></div>"
`;

exports[`remark-container > With new line in all case 1`] = `"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a tip</p></div></div>"`;

exports[`remark-container > details 1`] = `
"<details class="rspress-directive details"><summary class="rspress-directive-title">DETAILS</summary><div class="rspress-directive-content"><p>
This is a details block.</p></div></details>"
`;

exports[`remark-container > github alerts ~ caution 1`] = `
"<div class="rspress-directive caution"><div class="rspress-directive-title">CAUTION</div><div class="rspress-directive-content"><p>Use this code:-</p><pre><code class="language-javascript">console.log(69);
</code></pre></div></div>"
`;

exports[`remark-container > github alerts ~ note 1`] = `"<div class="rspress-directive note"><div class="rspress-directive-title">NOTE</div><div class="rspress-directive-content"><h1>Please read this note!</h1></div></div>"`;

exports[`remark-container > github alerts ~ tip 1`] = `"<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p><strong>Helpful advice for doing things better or more easily.</strong></p></div></div>"`;

exports[`remark-container > github alerts ~ warning 1`] = `"<div class="rspress-directive warning"><div class="rspress-directive-title">WARNING</div><div class="rspress-directive-content"><p>Use <code>dummy</code> instead of <code>demo</code></p></div></div>"`;

exports[`remark-container > nested in list - github alerts 1`] = `
"<ul>
<li>
<p>Title</p>
<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a 'tip' style block.</p></div></div>
</li>
</ul>
<ol>
<li>Title</li>
</ol>
<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>This is a 'tip' style block.</p></div></div>"
`;

exports[`remark-container > nested in ordered list 1`] = `
"<ol>
<li>Title1</li>
</ol>
<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>
This is a tip.</p></div></div>
<ol start="2">
<li>Title2</li>
</ol>"
`;

exports[`remark-container > nested in ordered list inside mdx component 1`] = `
"<div><div><div><ol>
<li>Title1</li>
</ol><div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>
This is a tip.</p></div></div><ol start="2">
<li>Title2</li>
</ol></div></div></div>"
`;

exports[`remark-container > nested in unordered list 1`] = `
"<ul>
<li>
<p>Title1</p>
<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>
This is a tip.</p></div></div>
</li>
<li>
<p>Title2</p>
</li>
</ul>"
`;

exports[`remark-container > nested in unordered list inside mdx component 1`] = `
"<div><div><div><ul>
<li>
<p>Title1</p>
<div class="rspress-directive tip"><div class="rspress-directive-title">TIP</div><div class="rspress-directive-content"><p>
This is a tip.</p></div></div>
</li>
<li>
<p>Title2</p>
</li>
</ul></div></div></div>"
`;
